Fixed contact me alignemnt

--- a/css/style.css
+++ b/css/style.css
@@ -155,15 +155,14 @@ header {
 }
 
 .contact-me {
-    padding-left: 20%;
-    padding-right: 5%;
-    width: 100%;
+    margin-left: 20%;
+    width: 70%;
+    margin-top: 15%;
 }
 
 .contact-me h1 {
     font-size: 100px;
     padding-bottom: 30px;
-    margin-top: 300px;
     text-align: left;
     color: rgb(209, 178, 0);
     letter-spacing: 2px;
